--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,35 +1,39 @@
 <!-- Global site tag (gtag.js) - Google Analytics without cookies -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics.id }}"
-></script>
-<script async src="https://cdn.jsdelivr.net/npm/uuid@latest/dist/umd/uuidv4.min.js"
-></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics.id }}"></script>
 
 <script>
 
-  window.dataLayer = window.dataLayer || []
+  window.dataLayer = window.dataLayer || [];
   function gtag() {
-    dataLayer.push(arguments)
+    dataLayer.push(arguments);
   }
-  gtag('js', new Date())
+  gtag('js', new Date());
 
-  const GA_LOCAL_STORAGE_KEY = 'ga:clientId'
+  function uuidv4() {
+    return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function(c) {
+      var r = Math.random() * 16 | 0, v = c == 'x' ? r : (r & 0x3 | 0x8);
+      return v.toString(16);
+    });
+  }
+
+  const GA_LOCAL_STORAGE_KEY = 'ga:clientId';
 
   if (window.localStorage) {
-    if (localStorage.getItem(GA_LOCAL_STORAGE_KEY)) {
-      gtag('js', new Date())
+    if (window.localStorage.getItem(GA_LOCAL_STORAGE_KEY)) {
+      gtag('js', new Date());
       gtag('config', '{{ site.google_analytics.id }}', {
         send_page_view: true,
         client_storage: 'none',
         client_id: localStorage.getItem(GA_LOCAL_STORAGE_KEY),
-      })
+      });
     } else {
-      window.localStorage.setItem(GA_LOCAL_STORAGE_KEY, uuidv4())
-      gtag('js', new Date())
+      window.localStorage.setItem(GA_LOCAL_STORAGE_KEY, uuidv4());
+      gtag('js', new Date());
       gtag('config', '{{ site.google_analytics.id }}', {
         send_page_view: true,
         client_storage: 'none',
         client_id: localStorage.getItem(GA_LOCAL_STORAGE_KEY),
-      })
+      });
     }
   }
 </script>
