--- a/assets/css/_colors/dark-typography.scss
+++ b/assets/css/_colors/dark-typography.scss
@@ -35,6 +35,7 @@
 
   /* Sidebar */
   --nav-cursor-color: rgb(183, 182, 182);
+  --sidebar-title-color: var(--theme-accent-primary);
 
   /* Top Bar */
   --topbar-text-color: var(--text-color);
