--- a/_includes/search-loader.html
+++ b/_includes/search-loader.html
@@ -10,7 +10,9 @@
 <div class="pl-1 pr-1 pl-sm-2 pr-sm-2 pl-lg-4 pr-lg-4 pl-xl-0 pr-xl-0">
   <a href="{{ site.url }}{url}">{title}</a>
   <div class="post-meta d-flex flex-column flex-sm-row text-muted mt-1 mb-1">
+    {% comment %}
     <div class="mr-sm-4"><i class="far fa-folder fa-fw"></i>{categories}</div>
+    {% endcomment %}
     <div><i class="fa fa-tag fa-fw"></i>{tags}</div>
   </div>
   <p>{snippet}</p>
