--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -57,6 +57,15 @@
 
 <div class="sidebar-bottom d-flex flex-wrap justify-content-around mt-4">
 
+  {% comment %}
+  {% if site.theme_mode == "dual" %}
+  <span id="mode-toggle-wrapper">
+      {% include mode-toggle.html %}
+  </span>
+  <span class="icon-border"></span>
+  {% endif %}
+  {% endcomment %}
+
   {% for entry in site.data.contact %}
     {% capture url %}
       {%- if entry.type == 'github' -%}
