--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -9,15 +9,40 @@
 @import "_addon/fonts";
 @import "_addon/module";
 @import "_addon/variables";
+@import "_colors/light-typography";
 @import "_colors/dark-typography";
 
-@mixin mode-toggle() {
-  @include dark-scheme;
+@mixin set-visible($light-display, $dark-display) {
+  [light-mode-invisible] {
+    display: $light-display;
+  }
+
+  [dark-mode-invisible] {
+    display: $dark-display;
+  }
+}
+
+@mixin mode-toggle($dark-mode: false) {
+  @if $dark-mode {
+    @include set-visible(inline-block, none);
+    @include dark-scheme;
+  } @else {
+    @include set-visible(none, inline-block);
+    @include light-scheme;
+  }
+}
+
+html:not([mode]), html[mode=light] {
+  @include mode-toggle();
+}
+
+html[mode=dark] {
+  @include mode-toggle(true);
 }
 
 @media (prefers-color-scheme: dark) {
-  html[mode=dark] {
-    @include mode-toggle();
+  html:not([mode]), html[mode=dark] {
+    @include mode-toggle(true);
   }
   html[mode=light] {
     @include mode-toggle();
@@ -65,7 +90,7 @@ $sidebar-display: "sidebar-display";
       &:hover {
         text-decoration: none;
       }
-      color: var(--titles-color);
+      color: var(--sidebar-title-color);
     }
   }
 
@@ -1450,6 +1475,15 @@ div.post-content .table-wrapper {
           text-align: center;
           width: 1.25em;
           padding-top: 0.44rem;
+        }
+      }
+
+      #mode-toggle-wrapper {
+        font-size: 0.9rem;
+        i {
+          @include icon-round(2rem);
+          padding-top: 0.44rem;
+          bottom: 0;
         }
       }
 
