Polished sidebar theme for 'large' width

--- a/assets/css/_addon/main.scss
+++ b/assets/css/_addon/main.scss
@@ -1452,10 +1452,9 @@ div.post-content .table-wrapper {
         letter-spacing: 3px;
       }
       > i {
-        @include icon-round(1.65rem);
         line-height: 1rem;
         font-size: 0.6rem;
-        padding: 0.5em 0 0 .1em;
+        padding: 0 0 0 0;
         display: inline-block!important;
       }
     }
@@ -1465,9 +1464,7 @@ div.post-content .table-wrapper {
       margin-right: 3rem;
       font-size: 1.3rem;
       a {
-        border: 1px solid;
-        border-radius: 50%;
-        font-size: 1rem;
+        font-size: 1.25rem;
         width: 2rem;
         height: 2rem;
         text-align: center;
