--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,6 +54,9 @@
     integrity="sha256-+N4/V/SbAFiW1MPBCXnfnP9QSN3+Keu+NlB+0ev/YKQ="
     crossorigin="anonymous">
 
+  <!-- Mastodon verification -->
+  <link rel="me" href="https://mastodon.world/@matteinn">
+
   {% include css-selector.html %}
 
   <!-- JavaScripts -->
